--- a/bastille.html
+++ b/bastille.html
@@ -32,72 +32,88 @@
                 </a>
                 <img src="/images/logo/ohmyfood.png" alt="logo picture">
             </div>
+            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.webp" alt="restaurant picture">
         </nav>
     </header>
     <!-- MAIN SECTION -->
     <main>
         <!--Bastille Menue section  -->
-        <article class="menu">
-            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant picture">
-            <h1>Bastille</h1>
-            <i class="far fa-heart"></i>
-        </article>
-        <!-- Starters -->
-        <article class="starters-bastille">
+        <article class="menu-bastille">
+            <article class="menu-title-bastille">
+                <h1>Bastille</h1>
+                <i class="far fa-heart"></i>
+            </article>
+            <!-- Starters -->
             <h2>ENTREES</h2>
-            <article class="strtr-bastille">
-                <h3>Citrus Squid Carpaccio</h3>
-                <p>With orange zest</p>
+            <div class="dish-bastille">
+                <article class="dish-info-bastille">
+                    <h3>Citrus Squid Carpaccio</h3>
+                    <p>With orange zest</p>
+                </article>
                 <span>25€</span>
-            </article>
-            <article class="strtr-bastille">
-                <h3>Grandmoters's Vegetable Soup</h3>
-                <p>Carrots,parsnips,Jerusalem artichoke</p>
+            </div>
+            <div class="dish-bastille">
+                <article class="dish-info-bastille">
+                    <h3>Grandmoters's Vegetable Soup</h3>
+                    <p>Carrots,parsnips,Jerusalem artichoke</p>
+                </article>
                 <span>35€</span>
-            </article>
-            <article class="strtr-bastille">
-                <h3>Onion Soup</h3>
-                <p>Revisited</p>
+            </div>
+            <div class="dish-bastille">
+                <article class="dish-info-bastille">
+                    <h3>Onion Soup</h3>
+                    <p>Revisited</p>
+                </article>
                 <span>20€</span>
-            </article>
+            </div>
             <!-- Main dish -->
-            <article class="main-bastille">
-                <h2>MAIN DISH</h2>
-                <article class="mn-bastille">
+            <h2>MAIN DISH</h2>
+            <div class="dish-bastille">
+                <article class="dish-info-bastille">
                     <h3>Scallops</h3>
                     <p>With mashed parsnip</p>
-                    <span>40€</span>
                 </article>
-                <article class="mn-bastille">
+                <span>40€</span>
+            </div>
+            <div class="dish-bastille">
+                <article class="dish-info-bastille">
                     <h3>Magret de canard</h3>
                     <p>With mashed potatoes</p>
-                    <span>35€</span>
                 </article>
-                <article class="mn-bastille">
+                <span>35€</span>
+            </div>
+            <div class="dish-bastille">
+                <article class="dish-info-bastille">
                     <h3>Game Hen</h3>
                     <p>With vegetable gnocchis</p>
-                    <span>44€</span>
                 </article>
-                <!-- Desserts -->
-                <article class="desserts-bastille">
-                    <h2>DESSERTS</h2>
-                    <article class="dssrt-bastille">
-                        <h3>Floral Ice Cream</h3>
-                        <p>With hazelnut butter</p>
-                        <span>18€</span>
-                    </article>
-                    <article class="dssrt-bastille">
-                        <h3>Chocolate Lava Cake</h3>
-                        <p>Revisited</p>
-                        <span>22€</span>
-                    </article>
-                    <article class="dssrt-bastille">
-                        <h3>Napolean</h3>
-                        <p>With blueberries and marzipan</p>
-                        <span>23€</span>
-                    </article>
+                <span>44€</span>
+            </div>
+            <!-- Desserts -->
+            <h2>DESSERTS</h2>
+            <div class="dish-bastille">
+                <article class="dish-info-bastille">
+                    <h3>Floral Ice Cream</h3>
+                    <p>With hazelnut butter</p>
                 </article>
-                <button class="order">Order</button>
+                <span>18€</span>
+            </div>
+            <div class="dish-bastille">
+                <article class="dish-info-bastille">
+                    <h3>Chocolate Lava Cake</h3>
+                    <p>Revisited</p>
+                </article>
+                <span>22€</span>
+            </div>
+            <div class="dish-bastille">
+                <article class="dish-info-bastille">
+                    <h3>Napolean</h3>
+                    <p>With blueberries and marzipan</p>
+                </article>
+                <span>23€</span>
+            </div>
+            <button class="order">Order</button>
+        </article>
     </main>
     <!-- FOOTER -->
     <footer>
