--- a/le_gourmand.html
+++ b/le_gourmand.html
@@ -32,72 +32,89 @@
                 </a>
                 <img src="/images/logo/ohmyfood.png" alt="logo picture">
             </div>
+            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.webp" alt="restaurant picture">
         </nav>
     </header>
     <!-- MAIN SECTION -->
     <main>
         <!--Le Gourmand Menue section  -->
-        <article class="menu">
-            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant picture">
-            <h1>Le Gourmand</h1>
-            <i class="far fa-heart"></i>
-        </article>
-        <!-- Starters -->
-        <article class="starters-gourmand">
+        <article class="menu-gourmand">
+            <article class="menu-title-gourmand">
+                <h1>Le Gourmand</h1>
+                <i class="far fa-heart"></i>
+            </article>
+            <!-- Starters -->
+
             <h2>ENTREES</h2>
-            <article class="strtr-gourmand">
-                <h3>Tuna Carpaccio</h3>
-                <p>Seasoned with yuzu</p>
+            <div class="dish-gourmand">
+                <article class="dish-info-gourmand">
+                    <h3>Tuna Carpaccio</h3>
+                    <p>Seasoned with yuzu</p>
+                </article>
                 <span>25€</span>
-            </article>
-            <article class="strtr-gourmand">
-                <h3>Crunchy Lobster Croquets</h3>
-                <p>With seasonal vegetables</p>
+            </div>
+            <div class="dish-gourmand">
+                <article class="dish-info-gourmand">
+                    <h3>Crunchy Lobster Croquets</h3>
+                    <p>With seasonal vegetables</p>
+                </article>
                 <span>35€</span>
-            </article>
-            <article class="strtr-gourmand">
-                <h3>Mushroom Soup</h3>
-                <p>With truffles</p>
+            </div>
+            <div class="dish-gourmand">
+                <article class="dish-info-gourmand">
+                    <h3>Mushroom Soup</h3>
+                    <p>With truffles</p>
+                </article>
                 <span>20€</span>
-            </article>
+            </div>
             <!-- Main dish -->
-            <article class="main-gourmand">
-                <h2>MAIN DISH</h2>
-                <article class="mn-gourmand">
+            <h2>MAIN DISH</h2>
+            <div class="dish-gourmand">
+                <article class="dish-info-gourmand">
                     <h3>Roast Chicken with Provincal Herbs</h3>
                     <p>With truffle cream</p>
-                    <span>40€</span>
                 </article>
-                <article class="mn-gourmand">
+                <span>40€</span>
+            </div>
+            <div class="dish-gourmand">
+                <article class="dish-info-gourmand">
                     <h3>Roasted Lobster</h3>
                     <p>With seasonel vegetables</p>
-                    <span>35€</span>
                 </article>
-                <article class="mn-gourmand">
+                <span>35€</span>
+            </div>
+            <div class="dish-gourmand">
+                <article class="dish-info-gourmand">
                     <h3>Angust Beef Ribs</h3>
                     <p>With mashed parshnips</p>
-                    <span>44€</span>
                 </article>
-                <!-- Desserts -->
-                <article class="desserts-gourmand">
-                    <h2>DESSERTS</h2>
-                    <article class="dssrt-gourmand">
-                        <h3>Assorted Dessert P|late</h3>
-                        <p>Chef's choice</p>
-                        <span>18€</span>
-                    </article>
-                    <article class="dssrt-gourmand">
-                        <h3>Crème brulée</h3>
-                        <p>Revisited</p>
-                        <span>22€</span>
-                    </article>
-                    <article class="dssrt-gourmand">
-                        <h3>Tiramisu</h3>
-                        <p>With hazelnuts</p>
-                        <span>23€</span>
-                    </article>
+                <span>44€</span>
+            </div>
+            <!-- Desserts -->
+            <h2>DESSERTS</h2>
+            <div class="dish-gourmand">
+                <article class="dish-info-gourmand">
+                    <h3>Assorted Dessert P|late</h3>
+                    <p>Chef's choice</p>
                 </article>
-                <button class="order">Order</button>
+                <span>18€</span>
+            </div>
+            <div class="dish-gourmand">
+                <article class="dish-info-gourmand">
+                    <h3>Crème brulée</h3>
+                    <p>Revisited</p>
+                </article>
+                <span>22€</span>
+            </div>
+            <div class="dish-gourmand">
+                <article class="dish-info-gourmand">
+                    <h3>Tiramisu</h3>
+                    <p>With hazelnuts</p>
+                </article>
+                <span>23€</span>
+            </div>
+            <button class="order">Order</button>
+        </article>
     </main>
     <!-- FOOTER -->
     <footer>
