--- a/the_enchanted_plate.html
+++ b/the_enchanted_plate.html
@@ -32,77 +32,97 @@
                 </a>
                 <img src="/images/logo/ohmyfood.png" alt="logo picture">
             </div>
+            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash (1).webp" 
+            alt="restaurant picture">
         </nav>
     </header>
     <!-- MAIN SECTION -->
     <main>
         <!--The Full Palette Menue section  -->
-        <article class="menu">
-            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant picture">
-            <h1>The Enchanted Plate</h1>
-            <i class="far fa-heart"></i>
-        </article>
-        <!-- Starters -->
-        <article class="starters-plate">
+        <article class="menu-plate">
+            <article class="menu-title-plate">
+                <h1>The Enchanted Plate</h1>
+                <i class="far fa-heart"></i>
+            </article>
+            <!-- Starters -->
             <h2>ENTREES</h2>
-            <article class="strtr-plate">
-                <h3>Foie Gras Ravioli</h3>
-                <p>With truffle cream</p>
+            <div class="dish-plate">
+                <article class="dish-info-plate">
+                    <h3>Foie Gras Ravioli</h3>
+                    <p>With truffle cream</p>
+                </article>
                 <span>25€</span>
-            </article>
-            <article class="strtr-plate">
-                <h3>Oscietra Caviar</h3>
-                <p>With buckwheat blinis</p>
+            </div>
+            <div class="dish-plate">
+                <article class="dish-info-plate">
+                    <h3>Oscietra Caviar</h3>
+                    <p>With buckwheat blinis</p>
+                </article>
                 <span>35€</span>
-            </article>
-            <article class="strtr-plate">
-                <h3>Lobster and Leek Foam</h3>
-                <p>Marinated with orange zest</p>
+            </div>
+            <div class="dish-plate">
+                <article class="dish-info-plate">
+                    <h3>Lobster and Leek Foam</h3>
+                    <p>Marinated with orange zest</p>
+                </article>
                 <span>20€</span>
-            </article>
-            <article class="strtr-plate">
-                <h3>Duck Foie Gras</h3>
-                <p>With fig jam and grilled baguette</p>
+            </div>
+            <div class="dish-plate">
+                <article class="dish-info-plate">
+                    <h3>Duck Foie Gras</h3>
+                    <p>With fig jam and grilled baguette</p>
+                </article>
                 <span>35€</span>
-            </article>
+            </div>
             <!-- Main dish -->
-            <article class="main-plate">
-                <h2>MAIN DISH</h2>
-                <article class="mn-plate">
+            <h2>MAIN DISH</h2>
+            <div class="dish-plate">
+                <article class="dish-info-plate">
                     <h3>Fresh Buttered Scallops</h3>
                     <p>With white celery puree</p>
-                    <span>40€</span>
                 </article>
-                <article class="mn-plate">
+                <span>40€</span>
+            </div>
+            <div class="dish-plate">
+                <article class="dish-info-plate">
                     <h3>Pan-Fried Lobster</h3>
                     <p>With mashed sweet potatoes</p>
-                    <span>35€</span>
                 </article>
-                <article class="mn-plate">
+                <span>35€</span>
+            </div>
+            <div class="dish-plate">
+                <article class="dish-info-plate">
                     <h3>Braised Ox Tail</h3>
                     <p>With wild rice and lemon zest</p>
-                    <span>44€</span>
                 </article>
-                <!-- Desserts -->
-                <article class="desserts-plate">
-                    <h2>DESSERTS</h2>
-                    <article class="dssrt-plate">
-                        <h3>Chocolate and Hazelnut Macaron</h3>
-                        <p>With caramel butter ice cream</p>
-                        <span>18€</span>
-                    </article>
-                    <article class="dssrt-plate">
-                        <h3>Baba au rhum</h3>
-                        <p>With lemon drizzle</p>
-                        <span>22€</span>
-                    </article>
-                    <article class="dssrt-plate">
-                        <h3>Lemon Meringue Pie</h3>
-                        <p>Destructured</p>
-                        <span>23€</span>
-                    </article>
+                <span>44€</span>
+            </div>
+            <!-- Desserts -->
+            <h2>DESSERTS</h2>
+            <div class="dish-plate">
+                <article class="dish-info=plate">
+                    <h3>Chocolate and Hazelnut Macaron</h3>
+                    <p>With caramel butter ice cream</p>
                 </article>
-                <button class="order">Order</button>
+                <span>18€</span>
+            </div>
+            <div class="dish-plate">
+                <article class="dish-info=plate">
+                    <h3>Baba au rhum</h3>
+                    <p>With lemon drizzle</p>
+                </article>
+                <span>22€</span>
+            </div>
+            <div class="dish-plate">
+                <article class="dish-info=plate">
+                    <h3>Lemon Meringue Pie</h3>
+                    <p>Destructured</p>
+                </article>
+                <span>23€</span>
+            </div>
+        </article>
+        <button class="order">Order</button>
+        </article>
     </main>
     <!-- FOOTER -->
     <footer>
