--- a/the_full_palette.html
+++ b/the_full_palette.html
@@ -32,72 +32,88 @@
                 </a>
                 <img src="/images/logo/ohmyfood.png" alt="logo picture">
             </div>
+            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.webp" alt="restaurant picture">
         </nav>
     </header>
     <!-- MAIN SECTION -->
     <main>
         <!--The Full Palette Menue section  -->
-        <article class="menu">
-            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant picture">
-            <h1>The Full Palette</h1>
-            <i class="far fa-heart"></i>
-        </article>
-        <!-- Starters -->
-        <article class="starters-palette">
+        <article class="menu-palette">
+            <article class="menu-title-palette">
+                <h1>The Full Palette</h1>
+                <i class="far heart fa-heart "></i>
+            </article>
+            <!-- Starters -->
             <h2>ENTREES</h2>
-            <article class="strtr-palette">
-                <h3>Escargot</h3>
-                <p>With southern French spices</p>
+            <div class="dish-palette">
+                <article class="dish-info-palette">
+                    <h3>Escargot</h3>
+                    <p>With southern French spices</p>
+                </article>
                 <span>25€</span>
-            </article>
-            <article class="strtr-palette">
-                <h3>Duck Foie Gras</h3>
-                <p>With black truffle shavings</p>
+            </div>
+            <div class="dish-palette">
+                <article class="dish-info-palette">
+                    <h3>Duck Foie Gras</h3>
+                    <p>With black truffle shavings</p>
+                </article>
                 <span>35€</span>
-            </article>
-            <article class="strtr-palette">
-                <h3>Fried egg</h3>
-                <p>Seasoned with truffle cream and... </p>
+            </div>
+            <div class="dish-palette">
+                <article class="dish-info-palette">
+                    <h3>Fried egg</h3>
+                    <p>Seasoned with truffle cream and... </p>
+                </article>
                 <span>20€</span>
-            </article>
+            </div>
             <!-- Main dish -->
-            <article class="main-palette">
-                <h2>MAIN DISH</h2>
-                <article class="mn-palette">
+            <h2>MAIN DISH</h2>
+            <div class="dish-palette">
+                <article class="dish-info-palette">
                     <h3>Herb-Encrusted Steak</h3>
                     <p>With delicately sliced and seasoned veg...</p>
-                    <span>40€</span>
                 </article>
-                <article class="mn-palette">
+                <span>40€</span>
+            </div>
+            <div class="dish-palette">
+                <article class="dish-info-palette">
                     <h3>Ox Tail Shepard's Pie</h3>
                     <p>With black truffle and pureed parsnips</p>
-                    <span>35€</span>
                 </article>
-                <article class="mn-palette">
+                <span>35€</span>
+            </div>
+            <div class="dish-palette">
+                <article class="dish-info-palette">
                     <h3>Filet of Sole</h3>
                     <p>With citrus dressing</p>
-                    <span>44€</span>
                 </article>
-                <!-- Desserts -->
-                <article class="desserts-palette">
-                    <h2>DESSERTS</h2>
-                    <article class="dssrt-palette">
-                        <h3>Paris-Brest</h3>
-                        <p>Revisited</p>
-                        <span>18€</span>
-                    </article>
-                    <article class="dssrt-palette">
-                        <h3>Chocolate Macaroons</h3>
-                        <p>With vanilla ice cream</p>
-                        <span>22€</span>
-                    </article>
-                    <article class="dssrt-palette">
-                        <h3>Chocolate Mousse</h3>
-                        <p>With cpices and black truffle</p>
-                        <span>23€</span>
-                    </article>
+                <span>44€</span>
+            </div>
+            <!-- Desserts -->
+            <h2>DESSERTS</h2>
+            <div class="dish-palette">
+                <article class="dish-info-palette">
+                    <h3>Paris-Brest</h3>
+                    <p>Revisited</p>
                 </article>
-                <button class="order">Order</button>
+                <span>18€</span>
+            </div>
+            <div class="dish-palette">
+                <article class="dish-info-palette">
+                    <h3>Chocolate Macaroons</h3>
+                    <p>With vanilla ice cream</p>
+                </article>
+                <span>22€</span>
+            </div>
+            <div class="dish-palette">
+                <article class="dish-info-palette">
+                    <h3>Chocolate Mousse</h3>
+                    <p>With cpices and black truffle</p>
+                </article>
+                <span>23€</span>
+            </div>
+            <button class="order">Order</button>
+        </article>
     </main>
     <!-- FOOTER -->
     <footer>
