--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -69,7 +69,7 @@
             <h3>Restaurants</h3>
             <div class="rst-ad">
                 <a target="_self" href="the_full_palette.html">
-                    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant picture">
+                    <img src="images/restaurants - main-page/jay-wennington-N_Y88TWmGwA-unsplash.webp" alt="restaurant picture">
                 </a>
                 <span>New</span>
                 <div class="ad-info">
@@ -82,7 +82,7 @@
             </div>
             <div class="rst-ad">
                 <a target="_self" href="the_enchanted_plate.html">
-                    <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant picture">
+                    <img src="images/restaurants - main-page/stil-u2Lp8tXIcjw-unsplash.webp" alt="restaurant picture">
                 </a>
                 <span>New</span>
                 <div class="ad-info">
@@ -95,7 +95,7 @@
             </div>
             <div class="rst-ad">
                 <a target="_self" href="bastille.html">
-                    <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant picture">
+                    <img src="images/restaurants - main-page/toa-heftiba-DQKerTsQwi0-unsplash.webp" alt="restaurant picture">
                 </a>
                 <div class="ad-info">
                     <article class="info">
@@ -107,10 +107,9 @@
             </div>
             <div class="rst-ad">
                 <a target="_self" href="le_gourmand.html">
-                    <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                    <img src="images/restaurants - main-page/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.webp"
                         alt="restaurant picture">
                 </a>
-                <span>New</span>
                 <div class="ad-info">
                     <article class="info">
                         <h4>Le Gourmand</h4>
