--- a/the_full_palette.html
+++ b/the_full_palette.html
@@ -45,6 +45,7 @@
             </article>
             <!-- Starters -->
             <h2>ENTREES</h2>
+            <div class="line"></div>
             <div class="dish-palette">
                 <article class="dish-info-palette">
                     <h3>Escargot</h3>
