--- a/bastille.html
+++ b/bastille.html
@@ -26,13 +26,14 @@
     <header>
         <!-- Navigation -->
         <nav>
-            <div class="rstnt-navigation">
+            <div class="rstnt-navigation-bastille">
                 <a href="ohmyfood.html">
                     <i class="fas fa-arrow-left"></i>
                 </a>
                 <img src="/images/logo/ohmyfood.png" alt="logo picture">
             </div>
-            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.webp" alt="restaurant picture">
+            <img class="nav-img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.webp"
+                alt="restaurant picture">
         </nav>
     </header>
     <!-- MAIN SECTION -->
@@ -41,10 +42,11 @@
         <article class="menu-bastille">
             <article class="menu-title-bastille">
                 <h1>Bastille</h1>
-                <i class="far fa-heart"></i>
+                <i class="far heart fa-heart"></i>
             </article>
             <!-- Starters -->
             <h2>ENTREES</h2>
+            <div class="line-bastille"></div>
             <div class="dish-bastille">
                 <article class="dish-info-bastille">
                     <h3>Citrus Squid Carpaccio</h3>
@@ -68,6 +70,7 @@
             </div>
             <!-- Main dish -->
             <h2>MAIN DISH</h2>
+            <div class="line-bastille"></div>
             <div class="dish-bastille">
                 <article class="dish-info-bastille">
                     <h3>Scallops</h3>
@@ -91,6 +94,7 @@
             </div>
             <!-- Desserts -->
             <h2>DESSERTS</h2>
+            <div class="line-bastille"></div>
             <div class="dish-bastille">
                 <article class="dish-info-bastille">
                     <h3>Floral Ice Cream</h3>
