--- a/le_gourmand.html
+++ b/le_gourmand.html
@@ -26,13 +26,14 @@
     <header>
         <!-- Navigation -->
         <nav>
-            <div class="rstnt-navigation">
+            <div class="rstnt-navigation-gourmand">
                 <a href="ohmyfood.html">
                     <i class="fas fa-arrow-left"></i>
                 </a>
                 <img src="/images/logo/ohmyfood.png" alt="logo picture">
             </div>
-            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.webp" alt="restaurant picture">
+            <img class="nav-img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.webp"
+                alt="restaurant picture">
         </nav>
     </header>
     <!-- MAIN SECTION -->
@@ -41,11 +42,12 @@
         <article class="menu-gourmand">
             <article class="menu-title-gourmand">
                 <h1>Le Gourmand</h1>
-                <i class="far fa-heart"></i>
+                <i class="far heart fa-heart"></i>
             </article>
             <!-- Starters -->
 
             <h2>ENTREES</h2>
+            <div class="line-gourmand"></div>
             <div class="dish-gourmand">
                 <article class="dish-info-gourmand">
                     <h3>Tuna Carpaccio</h3>
@@ -69,6 +71,7 @@
             </div>
             <!-- Main dish -->
             <h2>MAIN DISH</h2>
+            <div class="line-gourmand"></div>
             <div class="dish-gourmand">
                 <article class="dish-info-gourmand">
                     <h3>Roast Chicken with Provincal Herbs</h3>
@@ -92,6 +95,7 @@
             </div>
             <!-- Desserts -->
             <h2>DESSERTS</h2>
+            <div class="line-gourmand"></div>
             <div class="dish-gourmand">
                 <article class="dish-info-gourmand">
                     <h3>Assorted Dessert P|late</h3>
