--- a/the_enchanted_plate.html
+++ b/the_enchanted_plate.html
@@ -26,14 +26,13 @@
     <header>
         <!-- Navigation -->
         <nav>
-            <div class="rstnt-navigation">
+            <div class="rstnt-navigation-plate">
                 <a href="ohmyfood.html">
                     <i class="fas fa-arrow-left"></i>
                 </a>
                 <img src="/images/logo/ohmyfood.png" alt="logo picture">
             </div>
-            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash (1).webp" 
-            alt="restaurant picture">
+            <img class="nav-img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.webp" alt="restaurant picture">
         </nav>
     </header>
     <!-- MAIN SECTION -->
@@ -42,10 +41,11 @@
         <article class="menu-plate">
             <article class="menu-title-plate">
                 <h1>The Enchanted Plate</h1>
-                <i class="far fa-heart"></i>
+                <i class="far heart fa-heart"></i>
             </article>
             <!-- Starters -->
             <h2>ENTREES</h2>
+            <div class="line-plate"></div>
             <div class="dish-plate">
                 <article class="dish-info-plate">
                     <h3>Foie Gras Ravioli</h3>
@@ -76,6 +76,7 @@
             </div>
             <!-- Main dish -->
             <h2>MAIN DISH</h2>
+            <div class="line-plate"></div>
             <div class="dish-plate">
                 <article class="dish-info-plate">
                     <h3>Fresh Buttered Scallops</h3>
@@ -99,28 +100,28 @@
             </div>
             <!-- Desserts -->
             <h2>DESSERTS</h2>
+            <div class="line-plate"></div>
             <div class="dish-plate">
-                <article class="dish-info=plate">
+                <article class="dish-info-plate">
                     <h3>Chocolate and Hazelnut Macaron</h3>
                     <p>With caramel butter ice cream</p>
                 </article>
                 <span>18€</span>
             </div>
             <div class="dish-plate">
-                <article class="dish-info=plate">
+                <article class="dish-info-plate">
                     <h3>Baba au rhum</h3>
                     <p>With lemon drizzle</p>
                 </article>
                 <span>22€</span>
             </div>
             <div class="dish-plate">
-                <article class="dish-info=plate">
+                <article class="dish-info-plate">
                     <h3>Lemon Meringue Pie</h3>
                     <p>Destructured</p>
                 </article>
                 <span>23€</span>
             </div>
-        </article>
         <button class="order">Order</button>
         </article>
     </main>
