--- a/the_full_palette.html
+++ b/the_full_palette.html
@@ -26,13 +26,13 @@
     <header>
         <!-- Navigation -->
         <nav>
-            <div class="rstnt-navigation">
+            <div class="rstnt-navigation-palette">
                 <a href="ohmyfood.html">
                     <i class="fas fa-arrow-left"></i>
                 </a>
-                <img src="/images/logo/ohmyfood.png" alt="logo picture">
+                <img src="/images/logo/ohmyfood@2x.svg" alt="logo picture">
             </div>
-            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.webp" alt="restaurant picture">
+            <img class="nav-img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.webp" alt="restaurant picture">
         </nav>
     </header>
     <!-- MAIN SECTION -->
@@ -69,6 +69,7 @@
             </div>
             <!-- Main dish -->
             <h2>MAIN DISH</h2>
+            <div class="line"></div>
             <div class="dish-palette">
                 <article class="dish-info-palette">
                     <h3>Herb-Encrusted Steak</h3>
@@ -92,6 +93,7 @@
             </div>
             <!-- Desserts -->
             <h2>DESSERTS</h2>
+            <div class="line"></div>
             <div class="dish-palette">
                 <article class="dish-info-palette">
                     <h3>Paris-Brest</h3>
