--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -25,10 +25,15 @@
 <body>
     <!-- HEADER  -->
     <header>
+
         <!-- Section Navigation -->
         <nav>
+            <i class="far fa-soup"></i>
+
             <div class="navigation">
-                <img src="/images/logo/ohmyfood.png" alt="logo picture">
+                <a href="ohmyfood.html">
+                    <img src="/images/logo/ohmyfood.png" alt="logo picture">
+                </a>
                 <div class="search-btn-wrap">
                     <i class="fas fa-map-marker-alt"></i>
                     <input type="search" name="search-box" id="search" placeholder="Paris, Belleville" />
@@ -44,6 +49,7 @@
 
     <!-- MAIN SECTION -->
     <main>
+
         <!-- Section with the buttons for chosing 
             the place and prepare the menu -->
         <article class="btns">
@@ -69,7 +75,8 @@
             <h3>Restaurants</h3>
             <div class="rst-ad">
                 <a target="_self" href="the_full_palette.html">
-                    <img src="images/restaurants - main-page/jay-wennington-N_Y88TWmGwA-unsplash.webp" alt="restaurant picture">
+                    <img src="images/restaurants - main-page/jay-wennington-N_Y88TWmGwA-unsplash.webp"
+                        alt="restaurant picture">
                 </a>
                 <span>New</span>
                 <div class="ad-info">
@@ -78,6 +85,7 @@
                         <p>New York</p>
                     </article>
                     <i class="far fa-heart"></i>
+                    <i class="fas fa-heart"></i>
                 </div>
             </div>
             <div class="rst-ad">
@@ -95,7 +103,8 @@
             </div>
             <div class="rst-ad">
                 <a target="_self" href="bastille.html">
-                    <img src="images/restaurants - main-page/toa-heftiba-DQKerTsQwi0-unsplash.webp" alt="restaurant picture">
+                    <img src="images/restaurants - main-page/toa-heftiba-DQKerTsQwi0-unsplash.webp"
+                        alt="restaurant picture">
                 </a>
                 <div class="ad-info">
                     <article class="info">
@@ -134,7 +143,7 @@
             <a href="#">
                 <p>Legal</p>
             </a>
-            <a href="#">
+            <a href="contact.html">
                 <p>Contact</p>
             </a>
         </div>
