--- a/the_full_palette.html
+++ b/the_full_palette.html
@@ -32,7 +32,8 @@
                 </a>
                 <img src="/images/logo/ohmyfood@2x.svg" alt="logo picture">
             </div>
-            <img class="nav-img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.webp" alt="restaurant picture">
+            <img class="nav-img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.webp"
+                alt="restaurant picture">
         </nav>
     </header>
     <!-- MAIN SECTION -->
@@ -45,77 +46,86 @@
             </article>
             <!-- Starters -->
             <h2>ENTREES</h2>
-            <div class="line"></div>
-            <div class="dish-palette">
-                <article class="dish-info-palette">
-                    <h3>Escargot</h3>
-                    <p>With southern French spices</p>
-                </article>
-                <span>25€</span>
-            </div>
-            <div class="dish-palette">
-                <article class="dish-info-palette">
-                    <h3>Duck Foie Gras</h3>
-                    <p>With black truffle shavings</p>
-                </article>
-                <span>35€</span>
-            </div>
-            <div class="dish-palette">
-                <article class="dish-info-palette">
-                    <h3>Fried egg</h3>
-                    <p>Seasoned with truffle cream and... </p>
-                </article>
-                <span>20€</span>
+            <div class="menu-section palette">
+                <div class="line"></div>
+                <div class="dish-palette">
+                    <article class="dish-info-palette">
+                        <h3>Escargot</h3>
+                        <p>With southern French spices</p>
+                    </article>
+                    <span>25€</span>
+                </div>
+                <div class="dish-palette">
+                    <article class="dish-info-palette">
+                        <h3>Duck Foie Gras</h3>
+                        <p>With black truffle shavings</p>
+                    </article>
+                    <span>35€</span>
+                </div>
+                <div class="dish-palette">
+                    <article class="dish-info-palette">
+                        <h3>Fried egg</h3>
+                        <p>Seasoned with truffle cream and ... </p>
+                    </article>
+                    <span>20€</span>
+                </div>
             </div>
             <!-- Main dish -->
             <h2>MAIN DISH</h2>
-            <div class="line"></div>
-            <div class="dish-palette">
-                <article class="dish-info-palette">
-                    <h3>Herb-Encrusted Steak</h3>
-                    <p>With delicately sliced and seasoned veg...</p>
-                </article>
-                <span>40€</span>
-            </div>
-            <div class="dish-palette">
-                <article class="dish-info-palette">
-                    <h3>Ox Tail Shepard's Pie</h3>
-                    <p>With black truffle and pureed parsnips</p>
-                </article>
-                <span>35€</span>
-            </div>
-            <div class="dish-palette">
-                <article class="dish-info-palette">
-                    <h3>Filet of Sole</h3>
-                    <p>With citrus dressing</p>
-                </article>
-                <span>44€</span>
+            <div class="menu-section palette">
+                <div class="line"></div>
+                <div class="dish-palette">
+                    <article class="dish-info-palette">
+                        <h3>Herb-Encrusted Steak</h3>
+                        <p>With delicately sliced and seasoned veg...</p>
+                    </article>
+                    <span>40€</span>
+                </div>
+                <div class="dish-palette">
+                    <article class="dish-info-palette">
+                        <h3>Ox Tail Shepard's Pie</h3>
+                        <p>With black truffle and pureed parsnips</p>
+                    </article>
+                    <span>35€</span>
+                </div>
+                <div class="dish-palette">
+                    <article class="dish-info-palette">
+                        <h3>Filet of Sole</h3>
+                        <p>With citrus dressing</p>
+                    </article>
+                    <span>44€</span>
+                </div>
             </div>
             <!-- Desserts -->
             <h2>DESSERTS</h2>
-            <div class="line"></div>
-            <div class="dish-palette">
-                <article class="dish-info-palette">
-                    <h3>Paris-Brest</h3>
-                    <p>Revisited</p>
-                </article>
-                <span>18€</span>
+            <div class="menu-section palette">
+                <div class="line"></div>
+                <div class="dish-palette">
+                    <article class="dish-info-palette">
+                        <h3>Paris-Brest</h3>
+                        <p>Revisited</p>
+                    </article>
+                    <span>18€</span>
+                </div>
+                <div class="dish-palette">
+                    <article class="dish-info-palette">
+                        <h3>Chocolate Macaroons</h3>
+                        <p>With vanilla ice cream</p>
+                    </article>
+                    <span>22€</span>
+                </div>
+                <div class="dish-palette">
+                    <article class="dish-info-palette">
+                        <h3>Chocolate Mousse</h3>
+                        <p>With cpices and black truffle</p>
+                    </article>
+                    <span>23€</span>
+                </div>
             </div>
-            <div class="dish-palette">
-                <article class="dish-info-palette">
-                    <h3>Chocolate Macaroons</h3>
-                    <p>With vanilla ice cream</p>
-                </article>
-                <span>22€</span>
-            </div>
-            <div class="dish-palette">
-                <article class="dish-info-palette">
-                    <h3>Chocolate Mousse</h3>
-                    <p>With cpices and black truffle</p>
-                </article>
-                <span>23€</span>
-            </div>
-            <button class="order">Order</button>
+            <button class="order">
+                Order
+                <div class="order__light"></div>
+            </button>
         </article>
     </main>
     <!-- FOOTER -->
