--- a/the_full_palette.html
+++ b/the_full_palette.html
@@ -122,10 +122,7 @@
                     <span>23€</span>
                 </div>
             </div>
-            <button class="order">
-                Order
-                <div class="order__light"></div>
-            </button>
+            <button class="order">Order</button>
         </article>
     </main>
     <!-- FOOTER -->
