--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -28,8 +28,6 @@
 
         <!-- Section Navigation -->
         <nav>
-            <i class="far fa-soup"></i>
-
             <div class="navigation">
                 <a href="ohmyfood.html">
                     <img src="/images/logo/ohmyfood.png" alt="logo picture">
@@ -73,60 +71,52 @@
         <!-- Section of the restaurants -->
         <article class="rsts-section">
             <h3>Restaurants</h3>
-            <div class="rst-ad">
-                <a target="_self" href="the_full_palette.html">
-                    <img src="images/restaurants - main-page/jay-wennington-N_Y88TWmGwA-unsplash.webp"
-                        alt="restaurant picture">
-                </a>
+            <a class="rst-ad" target="_self" href="the_full_palette.html">
+                <img src="images/restaurants - main-page/jay-wennington-N_Y88TWmGwA-unsplash.webp"
+                    alt="restaurant picture">
                 <span>New</span>
                 <div class="ad-info">
                     <article class="info">
                         <h4>The Full Palette</h4>
-                        <p>New York</p>
+                        <p>Paris</p>
                     </article>
                     <i class="far fa-heart"></i>
                     <i class="fas fa-heart"></i>
                 </div>
-            </div>
-            <div class="rst-ad">
-                <a target="_self" href="the_enchanted_plate.html">
-                    <img src="images/restaurants - main-page/stil-u2Lp8tXIcjw-unsplash.webp" alt="restaurant picture">
-                </a>
+            </a>
+            <a class="rst-ad" target="_self" href="the_enchanted_plate.html">
+                <img src="images/restaurants - main-page/stil-u2Lp8tXIcjw-unsplash.webp" alt="restaurant picture">
                 <span>New</span>
                 <div class="ad-info">
                     <article class="info">
                         <h4>The Enchanted Plate</h4>
-                        <p>New York</p>
+                        <p>Paris</p>
                     </article>
                     <i class="far fa-heart"></i>
                 </div>
-            </div>
-            <div class="rst-ad">
-                <a target="_self" href="bastille.html">
-                    <img src="images/restaurants - main-page/toa-heftiba-DQKerTsQwi0-unsplash.webp"
-                        alt="restaurant picture">
-                </a>
+            </a>
+            <a class="rst-ad" target="_self" href="bastille.html">
+                <img src="images/restaurants - main-page/toa-heftiba-DQKerTsQwi0-unsplash.webp"
+                    alt="restaurant picture">
                 <div class="ad-info">
                     <article class="info">
                         <h4>Bastille</h4>
-                        <p>New York</p>
+                        <p>Paris</p>
                     </article>
                     <i class="far fa-heart"></i>
                 </div>
-            </div>
-            <div class="rst-ad">
-                <a target="_self" href="le_gourmand.html">
-                    <img src="images/restaurants - main-page/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.webp"
-                        alt="restaurant picture">
-                </a>
+            </a>
+            <a class="rst-ad" target="_self" href="le_gourmand.html">
+                <img src="images/restaurants - main-page/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.webp"
+                    alt="restaurant picture">
                 <div class="ad-info">
                     <article class="info">
                         <h4>Le Gourmand</h4>
-                        <p>New York</p>
+                        <p>Paris</p>
                     </article>
                     <i class="far fa-heart"></i>
                 </div>
-            </div>
+            </a>
         </article>
     </main>
     <footer>
@@ -143,7 +133,7 @@
             <a href="#">
                 <p>Legal</p>
             </a>
-            <a href="contact.html">
+            <a href="mailto:info@ohmyfood.com">
                 <p>Contact</p>
             </a>
         </div>
